--- a/Networking/CMakeLists.txt
+++ b/Networking/CMakeLists.txt
@@ -1,6 +1,7 @@
 #Networking engine cmake
 add_library(NetworkingEngine STATIC
-Client.cpp)
+	"Client.cpp"
+)
 
 target_include_directories(NetworkingEngine PUBLIC ${EngineUtilsIncludeDir} EngineUtils)
 
