--- a/Physics/CMakeLists.txt
+++ b/Physics/CMakeLists.txt
@@ -1,6 +1,7 @@
 #Physics engine cmake
 add_library(PhysicsEngine STATIC
-Physics.cpp)
+	"Physics.cpp"
+)
 
 set(PhysicsEngineIncludeDir "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)
 
