Graphics engine no longer sets FX11 & DirectXTex

--- a/3rdParty/CMakeLists.txt
+++ b/3rdParty/CMakeLists.txt
@@ -3,3 +3,5 @@ add_subdirectory(PhysX)
 add_subdirectory(GLM)
 add_subdirectory(FMOD)
 add_subdirectory(GLFW)
+add_subdirectory(FX11)
+add_subdirectory(DirectXTex)
