Added IPhysics and PhysXEngine setup
Added IPhysics interface with DefaultPhysics class
Added PhysXEngine which sets up top-level PhysX objects at construction and releases them on destruction
Added physics to the servicelocator from the engine
Fixed additional physX libraries not being included by cmake
Fixed physX header files not being included by cmake

--- a/3rdParty/PhysX/CMakeLists.txt
+++ b/3rdParty/PhysX/CMakeLists.txt
@@ -1,5 +1,5 @@
 # PhysX CMake
-set(PHYSX_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
+set(PHYSX_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include" CACHE PATH "")
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
 	# DLLs
 	set(PHYSX_DLL_DIR "${CMAKE_CURRENT_SOURCE_DIR}/bin/debug/PhysX_64.dll" CACHE PATH "")
@@ -11,6 +11,16 @@ if(CMAKE_BUILD_TYPE STREQUAL "Debug")
 	set(PHYSX_COMMON_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/PhysXCommon_64.lib" CACHE PATH "")
 	set(PHYSX_COOKING_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/PhysXCooking_64.lib" CACHE PATH "")
 	set(PHYSX_FOUNDATION_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/PhysXFoundation_64.lib" CACHE PATH "")
+	set(PHYSX_LOWLEVELAABB_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LowLevelAABB_static_64.lib" CACHE PATH "")
+	set(PHYSX_LOWLEVELDYNAMICS_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LowLevelDynamics_static_64.lib" CACHE PATH "")
+	set(PHYSX_LOWLEVEL_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/LowLevel_static_64.lib" CACHE PATH "")
+	set(PHYSX_CHARACTERKINEMATIC_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/PhysXCharacterKinematic_static_64.lib" CACHE PATH "")
+	set(PHYSX_EXTENSIONS_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/PhysXExtensions_static_64.lib" CACHE PATH "")
+	set(PHYSX_PVDSDK_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/PhysXPvdSDK_static_64.lib" CACHE PATH "")
+	set(PHYSX_TASK_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/PhysXTask_static_64.lib" CACHE PATH "")
+	set(PHYSX_VEHICLE_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/PhysXVehicle_static_64.lib" CACHE PATH "")
+	set(PHYSX_SCENEQUERY_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/SceneQuery_static_64.lib" CACHE PATH "")
+	set(PHYSX_SIMULATIONCONTROLLER_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/debug/SimulationController_static_64.lib" CACHE PATH "")
 else()
 	# DLLs
 	set(PHYSX_DLL_DIR "${CMAKE_CURRENT_SOURCE_DIR}/bin/release/PhysX_64.dll" CACHE PATH "")
@@ -22,5 +32,15 @@ else()
 	set(PHYSX_COMMON_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/release/PhysXCommon_64.lib" CACHE PATH "")
 	set(PHYSX_COOKING_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/release/PhysXCooking_64.lib" CACHE PATH "")
 	set(PHYSX_FOUNDATION_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/release/PhysXFoundation_64.lib" CACHE PATH "")
+	set(PHYSX_LOWLEVELAABB_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LowLevelAABB_static_64.lib" CACHE PATH "")
+	set(PHYSX_LOWLEVELDYNAMICS_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LowLevelDynamics_static_64.lib" CACHE PATH "")
+	set(PHYSX_LOWLEVEL_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/release/LowLevel_static_64.lib" CACHE PATH "")
+	set(PHYSX_CHARACTERKINEMATIC_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/release/PhysXCharacterKinematic_static_64.lib" CACHE PATH "")
+	set(PHYSX_EXTENSIONS_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/release/PhysXExtensions_static_64.lib" CACHE PATH "")
+	set(PHYSX_PVDSDK_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/release/PhysXPvdSDK_static_64.lib" CACHE PATH "")
+	set(PHYSX_TASK_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/release/PhysXTask_static_64.lib" CACHE PATH "")
+	set(PHYSX_VEHICLE_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/release/PhysXVehicle_static_64.lib" CACHE PATH "")
+	set(PHYSX_SCENEQUERY_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/release/SceneQuery_static_64.lib" CACHE PATH "")
+	set(PHYSX_SIMULATIONCONTROLLER_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/release/SimulationController_static_64.lib" CACHE PATH "")
 endif()
 message("Include dir: ${PHYSX_INCLUDE_DIR}")
