Added boxcollider & rigidbody
Added cube obj
Added PhysicsSync class with static function to sync from physX to transform component
Added IPhysicsObject interface and PhysXObject classe which is a wrapper around a rigidactor
Added IShape interface and PhysXShapes file which will hold all the PhysX shapes as different classes
Modified physics engine to be able to add actors and simulate the scene
Added physics to the main game loop
Added BoxCollider & Rigidbody components to the main engine

--- a/Physics/CMakeLists.txt
+++ b/Physics/CMakeLists.txt
@@ -1,7 +1,9 @@
 #Physics engine cmake
 add_library(PhysicsEngine STATIC
 "PhysX/PhysXEngine.cpp"
-"PhysX/PhysXScene.cpp")
+"PhysX/PhysXScene.cpp" 
+"PhysX/PhysXObject.cpp" 
+"PhysX/PhysXShapes.cpp")
 
 set(PhysicsEngineIncludeDir "${CMAKE_CURRENT_SOURCE_DIR}" CACHE PATH "")
 
