Fixed mass calculations and added SetMass function
Calcualte CenterOfMass functino in the PhysXObject class now uses the PxRigidBodyExt::setMassAndUpdateIntertia function, which sets more parameters then just the COM for correct behaviour.
Moved Rigidbody from inside the IPhysicsObject interface to its own file
Added SetMass functino to Rigidbody component

--- a/Physics/CMakeLists.txt
+++ b/Physics/CMakeLists.txt
@@ -3,7 +3,8 @@ add_library(PhysicsEngine STATIC
 "PhysX/PhysXEngine.cpp"
 "PhysX/PhysXScene.cpp" 
 "PhysX/PhysXObject.cpp" 
-"PhysX/PhysXShapes.cpp")
+"PhysX/PhysXShapes.cpp" 
+"Data/Rigidbody.cpp")
 
 set(PhysicsEngineIncludeDir "${CMAKE_CURRENT_SOURCE_DIR}" CACHE PATH "")
 
