Added Quaternion class with helper functions
Moved all the quaternion/euler angles calculations to a Quaternion class inside the utils engine, it is non constructable and has some static helper functions to correctly convert from euler to quaternion and from quaternion to euler

--- a/Utils/CMakeLists.txt
+++ b/Utils/CMakeLists.txt
@@ -1,5 +1,7 @@
 # Utils cmake
 
-add_library(EngineUtils "Debug.cpp")
+add_library(EngineUtils "Debug.cpp" "Quaternion.cpp")
 
 set(EngineUtilsIncludeDir "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)
+
+target_include_directories(EngineUtils PUBLIC ${GLMIncludeDir})
