Added physics materials
Added IPhysicsMaterial interface and PhysXMaterial class
Added CreateMaterial function to the IPhysics interface and PhysXEngine class
Added SetMaterial function to the Collider base class
Colliders that get created without a physics collider set will be created using a default material created by the physics engine

--- a/Physics/CMakeLists.txt
+++ b/Physics/CMakeLists.txt
@@ -4,7 +4,8 @@ add_library(PhysicsEngine STATIC
 "PhysX/PhysXScene.cpp" 
 "PhysX/PhysXObject.cpp" 
 "PhysX/PhysXShapes.cpp" 
-"Data/Rigidbody.cpp")
+"Data/Rigidbody.cpp" 
+"PhysX/PhysXMaterial.cpp")
 
 set(PhysicsEngineIncludeDir "${CMAKE_CURRENT_SOURCE_DIR}" CACHE PATH "")
 
