Added collision callbacks
Added PhysXSimulationCallbacks & PhysXSimulationFilterShader which are owned by the PhysXEngine and passed to the PxScene on creation. PhysXSimulationFilterShader currently lets all the collisions succeed and notify
A pointer to the component collider is now stored inside the userdata of the corresponding PxShape
Added static OnCollision method to the PhysicsSync class to handle incoming collision events from the physics engine
Added Subject to the Collider component which gets called when that collider receives a collision event
Added PrintCollision component which subscribes to the OnCollision subject of the collider on the same gameobject and prints the names of the gameobjects that are colliding

--- a/UnnamedAdventureGame/CMakeLists.txt
+++ b/UnnamedAdventureGame/CMakeLists.txt
@@ -9,7 +9,7 @@ add_executable(UnnamedAdventureGame
 	"Components/WindowManager.cpp"
 	"Components/AudioTester.cpp"
 	"Components/SineWaveTerrain.cpp"
-)
+    "Components/PrintCollision.cpp")
 
 target_include_directories(
 	LeapEngine PUBLIC 
