Added AddForce and AddTorque to the rigidbody component
Moved temporary rigidbody creation to a CheckExistence function instead of copy pasting the code in each function
Added Force struct, which stores the value, if it is a torque or not, and the force mode
Added AddForce and AddTorque to the Rigidbody class and the Rigidbody component
PhysXObject now applies forces stored in the rigidbody class
Added ApplyForces component to test force functions

--- a/UnnamedAdventureGame/CMakeLists.txt
+++ b/UnnamedAdventureGame/CMakeLists.txt
@@ -9,7 +9,8 @@ add_executable(UnnamedAdventureGame
 	"Components/WindowManager.cpp"
 	"Components/AudioTester.cpp"
 	"Components/SineWaveTerrain.cpp"
-    "Components/PrintCollision.cpp")
+    "Components/PrintCollision.cpp"
+	"Components/ApplyForces.cpp")
 
 target_include_directories(
 	LeapEngine PUBLIC 
