Added more collision & trigger events
Renamed OnCollision to OnCollisionEnter, Added OnCollisionStay and OnCollisionExit
Added PhysXSimulationfilterCallback class which gives us more control
Added setup for OnTriggerEnter, OnTriggerStay and OnTriggerExit but the SimulationfilterCallback isn't being called for trigger shapes yet, that's the next step.

--- a/Physics/CMakeLists.txt
+++ b/Physics/CMakeLists.txt
@@ -6,7 +6,8 @@ add_library(PhysicsEngine STATIC
 "PhysX/PhysXShapes.cpp" 
 "Data/Rigidbody.cpp" 
 "PhysX/PhysXMaterial.cpp" 
-"PhysX/PhysXSimulationCallbacks.cpp")
+"PhysX/PhysXSimulationCallbacks.cpp" 
+"PhysX/PhysXSimulationFilterCallback.cpp")
 
 set(PhysicsEngineIncludeDir "${CMAKE_CURRENT_SOURCE_DIR}" CACHE PATH "")
 
