SetSize/SetRadius on colliders can now be called during runtime
Added RescaleShape pure virtual method to the base collider and added overrides to all the collider components
RescaleShape is now being called when scale has changed on the transform of the component
Added capsule.obj
Renamed Observer and Subject to TObserver and TSubject and added a non-templated Observer & Subject class

--- a/UnnamedAdventureGame/CMakeLists.txt
+++ b/UnnamedAdventureGame/CMakeLists.txt
@@ -10,7 +10,8 @@ add_executable(UnnamedAdventureGame
 	"Components/AudioTester.cpp"
 	"Components/SineWaveTerrain.cpp"
     "Components/PrintCollision.cpp"
-	"Components/ApplyForces.cpp")
+	"Components/ApplyForces.cpp" 
+	"Components/ColliderScaler.cpp")
 
 target_include_directories(
 	LeapEngine PUBLIC 
