Applied code review feedback
Const correctness in PhysXObject & PhysXScene
Removed redundant includes in PhysXEngine, PhysXMaterial, PhysXObject and PhysXSimulationCallbacks
GetConstraints function in the Rigidbody class now returns a const reference instead of a copy
Removed make_pair call for more readable code in the GetDebugDrawings function in the PhysXScene
Refactored IPhysxShape so it deletes the PxShape in its own destructors instead of the derived destructor and made the GetShape method non-virtual.
Cleaned unag CMakeLists

--- a/UnnamedAdventureGame/CMakeLists.txt
+++ b/UnnamedAdventureGame/CMakeLists.txt
@@ -11,7 +11,8 @@ add_executable(UnnamedAdventureGame
 	"Components/SineWaveTerrain.cpp"
     "Components/PrintCollision.cpp"
 	"Components/ApplyForces.cpp" 
-	"Components/ColliderScaler.cpp" "Components/PrintVelocity.h" "Components/PrintVelocity.cpp")
+	"Components/ColliderScaler.cpp" 
+	"Components/PrintVelocity.cpp")
 
 target_include_directories(
 	LeapEngine PUBLIC 
