--- a/Graphics/CMakeLists.txt
+++ b/Graphics/CMakeLists.txt
@@ -26,7 +26,7 @@ add_library(GraphicsEngine STATIC
 	"Shaders/Sprites.cpp" 
 	"DirectX/DirectXDefaults.cpp"
 	"Shaders/Heightmap.cpp"
-)
+    "DirectX/DirectXMesh.cpp")
 
 set(GraphicsEngineIncludeDir "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)
 
