--- a/LeapEngine/CMakeLists.txt
+++ b/LeapEngine/CMakeLists.txt
@@ -29,6 +29,7 @@ add_library(LeapEngine STATIC
     "Components/Physics/Rigidbody.cpp"
     "Components/Physics/SphereCollider.cpp"
     "Components/Physics/Collider.cpp" 
-	"Components/Physics/CapsuleCollider.cpp")
+	"Components/Physics/CapsuleCollider.cpp" 
+	"Graphics/Mesh.cpp")
 
 set(LeapEngineIncludeDir "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)
