Added eventpool to utils

--- a/Utils/CMakeLists.txt
+++ b/Utils/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Utils cmake
 
-add_library(EngineUtils "Debug.cpp" "Quaternion.cpp")
+add_library(EngineUtils "Debug.cpp" "Quaternion.cpp" "EventPool.h")
 
 set(EngineUtilsIncludeDir "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)
 
