Added basic client networking & packet base
Example is set in the main

--- a/Networking/CMakeLists.txt
+++ b/Networking/CMakeLists.txt
@@ -1,7 +1,7 @@
 #Networking engine cmake
 add_library(NetworkingEngine STATIC
-	"Client.cpp"
-)
+	"Leap/LeapPacket.cpp"
+	"Leap/LeapClient.cpp")
 
 target_include_directories(NetworkingEngine PUBLIC ${EngineUtilsIncludeDir} EngineUtils)
 
