Structured & cleaned up utils cmake

--- a/Utils/CMakeLists.txt
+++ b/Utils/CMakeLists.txt
@@ -1,6 +1,8 @@
 # Utils cmake
 
-add_library(EngineUtils "Debug.cpp" "Quaternion.cpp" "EventPool.h")
+add_library(EngineUtils
+	"Debug.cpp"
+	"Quaternion.cpp")
 
 set(EngineUtilsIncludeDir "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)
 
