Fixed build problems after fix merge conflicts
Added the DrawLine function that was removed by accident during the merge conflict fix in the DirectXEngine class
Added the Physics class to the CmakeLists of the base engine because it was accidentally removed during the merge conflict fix

--- a/LeapEngine/CMakeLists.txt
+++ b/LeapEngine/CMakeLists.txt
@@ -29,9 +29,10 @@ add_library(LeapEngine STATIC
     "Components/Physics/Rigidbody.cpp"
     "Components/Physics/SphereCollider.cpp"
     "Components/Physics/Collider.cpp" 
-	  "Components/Physics/CapsuleCollider.cpp" 
+	"Components/Physics/CapsuleCollider.cpp" 
+    "Physics/Physics.cpp"
     "GameContext/Logger/NetworkLogger.cpp"
-	  "Graphics/Mesh.cpp" 
+	"Graphics/Mesh.cpp" 
     "Graphics/Texture.cpp" 
     "Graphics/Material.cpp" 
     "Graphics/Shader.cpp")
