Removed logic from main scene and added ImGui scene chooser
Removed any logic that was still inside the MainMenuScene (renamed to MainScene)
Added an ImguiSceneChooser component that has buttons to load different scenes

--- a/UnnamedAdventureGame/CMakeLists.txt
+++ b/UnnamedAdventureGame/CMakeLists.txt
@@ -10,7 +10,7 @@ endif()
 
 add_executable(UnnamedAdventureGame ${WIN32_EXECUTABLE}
 	"main.cpp"
-	"Scenes/MainMenuScene.cpp"
+	"Scenes/MainScene.cpp"
 	"Components/Transformator.cpp"
 	"Components/InfoUI.cpp"
 	"Components/FreeCamMovement.cpp"
@@ -20,7 +20,8 @@ add_executable(UnnamedAdventureGame ${WIN32_EXECUTABLE}
     "Components/PrintCollision.cpp"
 	"Components/ApplyForces.cpp" 
 	"Components/ColliderScaler.cpp" 
-	"Components/PrintVelocity.cpp")
+	"Components/PrintVelocity.cpp" 
+	"Components/ImGuiSceneChooser.cpp")
 
 target_include_directories(
 	LeapEngine PUBLIC 
