--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@ out/
 3rdParty/Vulkan/Lib/shaderc_combinedd.lib
 3rdParty/Vulkan/Lib/SPIRV-Tools-optd.lib
 Folder.DotSettings.user
+*.vcxproj
+*.vcxproj.filters
+*.vcxproj.user
+*.sln
+build/*
