--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ if (MSVC)
 	# 19.31.31105.0 is the compiler version of VS 2022 17.1.3, hard to tell which version introduced C++23
 	if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS_EQUAL "19.31.31105.0")
 		set(CMAKE_CXX_STANDARD 23)
+	else()
+		set(CMAKE_CXX_STANDARD 20)
 	endif()
 else()
 	set(CMAKE_CXX_STANDARD 20)
