--- a/UnnamedAdventureGame/CMakeLists.txt
+++ b/UnnamedAdventureGame/CMakeLists.txt
@@ -24,7 +24,8 @@ add_executable(UnnamedAdventureGame ${WIN32_EXECUTABLE}
 	"Components/ImGuiSceneChooser.cpp"
 	"Components/PointConversionTest.cpp" 
 	"Scenes/ExtendedCameraTest.cpp"
-	"Scenes/ParticleTest.cpp")
+	"Scenes/ParticleTest.cpp" 
+	"Scenes/MeshLoadingTest.cpp")
 
 target_include_directories(
 	LeapEngine PUBLIC 
