Added GameObjectUtility to convert FBX to gameobjects

--- a/LeapEngine/CMakeLists.txt
+++ b/LeapEngine/CMakeLists.txt
@@ -35,6 +35,7 @@ add_library(LeapEngine STATIC
 	"Graphics/Mesh.cpp" 
     "Graphics/Texture.cpp" 
     "Graphics/Material.cpp" 
-    "Components/RenderComponents/ParticleRenderer.cpp")
+    "Components/RenderComponents/ParticleRenderer.cpp" 
+	"Utility/GameObjectUtility.cpp")
 
 set(LeapEngineIncludeDir "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)
